[package]
name = "wp-mini-html"
version = "0.1.0-alpha.2"
edition = "2024"
description = "Minimal async WP to HTML downloader | Extremely minimal."
license = "AGPL-3.0-only"
documentation = "https://docs.rs/wp-mini-html"
homepage = "https://wprs.dev/mini-html"
repository = "https://github.com/WattDownload/crate-wp-mini-html"
authors = ["ZhiFenBL"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.102"
askama = { version = "0.15.6", default-features = false, features = ["derive", "std"] }
base64 = "0.22.1"
futures = "0.3.32"
lol_html = "2.7.2"
quick-xml = { version = "0.39.2", features = ["serde"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "http2"] }
sanitize-filename = "0.6.0"
thiserror = "2.0.18"
tracing = "0.1.44"
wp-mini = "0.2.0-alpha.3"
zip = "8.5.1"
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }
